# copilot-subagents

./: .env  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.docs/guides/: README.md  building-cli-tools-with-uv.md
.github/: copilot-instructions.md
.github/instructions/: subagents.instructions.md
.github/prompts/: create-subagent.prompt.md  invoke-with-subagents.prompt.md  plan-with-subagents.prompt.md
.github/subagents/: README.md  code-reviewer.md  security-scanner.md  vue3-mobile-dev.md
examples/: typescript_file.ts
src/copilot_subagents/: README.md  pyproject.toml
src/copilot_subagents/src/: __init__.py  cli.py  core.py
src/copilot_subagents/src/commands/: __init__.py  invoke.py  list.py  verify.py
test/Tests.copilot_subagents/: README.md  __init__.py  test_cli.py  test_core.py
